Solved a few spotbugs warnings. Improved Javadoc in a few places. Updated copyright notice to 2020. The Serializable class Localization had two fields that were non-serializable. They have been marked as transient.