@@ -280,7 +280,7 @@ public final class Primitive
     {
         if (object instanceof Number)
         {
-            return new Byte(((Number) object).byteValue());
+            return Byte.valueOf(((Number) object).byteValue());
         }
         return (Byte) object;
     }
@@ -294,7 +294,7 @@ public final class Primitive
     {
         if (object instanceof Number)
         {
-            return new Character((char) ((Number) object).byteValue());
+            return Character.valueOf((char) ((Number) object).byteValue());
         }
         return (Character) object;
     }
@@ -306,7 +306,7 @@ public final class Primitive
      */
     public static Double toDouble(final Object object)
     {
-        return new Double(((Number) object).doubleValue());
+        return Double.valueOf(((Number) object).doubleValue());
     }
 
     /**
@@ -316,7 +316,7 @@ public final class Primitive
      */
     public static Float toFloat(final Object object)
     {
-        return new Float(((Number) object).floatValue());
+        return Float.valueOf(((Number) object).floatValue());
     }
 
     /**
@@ -326,7 +326,7 @@ public final class Primitive
      */
     public static Long toLong(final Object object)
     {
-        return new Long(((Number) object).longValue());
+        return Long.valueOf(((Number) object).longValue());
     }
 
     /**
@@ -336,7 +336,7 @@ public final class Primitive
      */
     public static Short toShort(final Object object)
     {
-        return new Short(((Number) object).shortValue());
+        return Short.valueOf(((Number) object).shortValue());
     }
 
     /**
@@ -348,16 +348,16 @@ public final class Primitive
     {
         if (object instanceof Character)
         {
-            return new Integer(((Character) object).charValue());
+            return Integer.valueOf(((Character) object).charValue());
         }
         if (object instanceof Boolean)
         {
             if (((Boolean) object).booleanValue())
             {
-                return new Integer(1);
+                return Integer.valueOf(1);
             }
-            return new Integer(0);
+            return Integer.valueOf(0);
         }
-        return new Integer(((Number) object).intValue());
+        return Integer.valueOf(((Number) object).intValue());
     }
 }
